src/components/App/App.css
.app {
  display: flex;
  background-color: #0f172b;
  font-family: "Manrope", Arial, sans-serif;
  font-size: 16px;
  line-height: 20px;
  font-weight: 500;
  color: #ffffff;
  min-height: 100vh;
  transition: all 0.3s ease;
}

.app__content {
  flex: 1;
  max-width: calc(1440px - 222px);
  margin: 0 auto;
  padding: 32px 40px;
  transition: all 0.3s ease;
  box-sizing: border-box;
}

/* Adjust max width dynamically when collapsed */
.app--collapsed .app__content {
  max-width: calc(1440px - 46px);
}

@media screen and (max-width: 810px) {
  .app__content {
    box-sizing: border-box;
    max-width: 100%;
    padding: 24px 24px 90px;
  }
}

